test/types/file/freadNoFloat.good
freadNoFloat.chpl:4: error: Unhandled system error: bad format (1002)
